veygo-app/main/default/objects/Account/fields/Admiral_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Admiral_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admiral Marketing</label>
    <type>Checkbox</type>
</CustomField>