veygo-app/main/default/objects/Account/fields/Admiral_Marketing_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Admiral_Marketing_Datetime__c</fullName>
    <label>Admiral Marketing Datetime</label>
    <type>DateTime</type>
</CustomField>