veygo-app/main/default/objects/Account/fields/CanEdit__c.field-meta.xml
<CustomField>
    <fullName>CanEdit__c</fullName>
    <formula>IF(ISBLANK(CustomerLastEditedPersonalInfo__pc), true, false) || 
IF(CustomerLastEditedPersonalInfo__pc &lt; NOW() - 30 , true, false) ||
IF(CustomerLastEditedPersonalInfo__pc &gt;= NOW() - 30 , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Edit</label>
    <type>Checkbox</type>
</CustomField>