veygo-app/main/default/objects/Account/fields/CognitoId__c.field-meta.xml
<CustomField>
    <fullName>CognitoId__c</fullName>
    <label>Cognito Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>