veygo-app/main/default/objects/Account/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <displayFormat>CI-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <type>AutoNumber</type>
</CustomField>