veygo-app/main/default/objects/Account/fields/Flat_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Number__c</fullName>
    <label>Flat no.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>