veygo-app/main/default/objects/Account/fields/Has_Convictions__c.field-meta.xml
<CustomField>
    <fullName>Has_Convictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Convictions</label>
    <type>Checkbox</type>
</CustomField>