veygo-app/main/default/objects/Account/fields/House_Name__c.field-meta.xml
<CustomField>
    <fullName>House_Name__c</fullName>
    <label>House Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>