veygo-app/main/default/objects/Account/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <label>House Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>