veygo-app/main/default/objects/Account/fields/License_Country__c.field-meta.xml
<CustomField>
    <fullName>License_Country__c</fullName>
    <label>License Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>