veygo-app/main/default/objects/Account/fields/Offers_And_Updates__c.field-meta.xml
<CustomField>
    <fullName>Offers_And_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offers And Updates</label>
    <type>Checkbox</type>
</CustomField>