veygo-app/main/default/objects/Account/fields/Offers_And_Updates_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Offers_And_Updates_Datetime__c</fullName>
    <label>Offers And Updates Datetime</label>
    <type>DateTime</type>
</CustomField>