veygo-app/main/default/objects/Account/fields/Policy_Admin_URL__c.field-meta.xml
<CustomField>
    <fullName>Policy_Admin_URL__c</fullName>
    <description>A link to the customer&apos;s quotes and policies contained in the policy admin system</description>
    <formula>IF( $Organization.Id == $Label.ProductionOrgID,
  $Label.VeygoProductionAdminBaseUrl,
  $Label.VeygoPreprodAdminBaseUrl
) + &quot;/quote/quotesandpolicies/?identity_uuid=&quot; + CognitoId__c</formula>
    <label>Policy Admin URL</label>
    <type>Text</type>
</CustomField>