veygo-app/main/default/objects/Account/fields/Provisional_Licence_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Licence_Confirmation_Date__c</fullName>
    <label>Provisional Licence Confirmation Date</label>
    <type>DateTime</type>
</CustomField>