veygo-app/main/default/objects/Account/fields/Provisional_Licence_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Licence_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisional Licence Confirmed</label>
    <type>Checkbox</type>
</CustomField>