veygo-app/main/default/objects/Account/fields/SourceRecord_UUID__c.field-meta.xml
<CustomField>
    <fullName>SourceRecord_UUID__c</fullName>
    <label>Source Record UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>