veygo-app/main/default/objects/Account/fields/Surveys_And_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Surveys_And_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surveys And Feedback</label>
    <type>Checkbox</type>
</CustomField>