veygo-app/main/default/objects/Account/fields/Surveys_And_Feedback_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Surveys_And_Feedback_Datetime__c</fullName>
    <label>Surveys And Feedback Datetime</label>
    <type>DateTime</type>
</CustomField>