veygo-app/main/default/objects/Account/fields/Total_Hours_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Purchased__c</fullName>
    <label>Total Hours Purchased</label>
    <summarizedField>InsurancePolicy.DurationHours__c</summarizedField>
    <summaryForeignKey>InsurancePolicy.NameInsuredId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>