veygo-app/main/default/objects/Account/validationRules/License_Number_Format_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>License_Number_Format_Check</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(License_Number__c, &apos;[A-Z0-9]{5}\\d[0156]\\d([0][1-9]|[12]\\d|3[01])\\d[A-Z0-9]{3}[A-Z]{2}&apos;))</errorConditionFormula>
    <errorDisplayField>License_Number__c</errorDisplayField>
    <errorMessage>License Number is not in good format.</errorMessage>
</ValidationRule>