veygo-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>PC_FIRST_NAME</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>License_Number__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>